--- a/public/index.html
+++ b/public/index.html
@@ -19,16 +19,25 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap"
+      rel="stylesheet"
+    />
 
-    <title>MyNotes - Enjoy your notes</title>
+    <title>NoteSafe - Enjoy your notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    
+
     <!-- font awesome script -->
-    <script src="https://kit.fontawesome.com/d72a287c27.js" crossorigin="anonymous"></script>
-    
+    <script
+      src="https://kit.fontawesome.com/d72a287c27.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- BOOTSTRAP JavaScript -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
